--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+
 
     <application
         android:name=".app.QueueApplicationContainer"
@@ -20,6 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QUp"
         tools:targetApi="31">
+
+        <service android:name=".RefreshService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync">
+        </service>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
